Fixed issue with re-initing Editors

--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                 </div>
             </div>
             <div class="card">
-                <h3 class="card-title">Load Posts For the Newsletter</h3>
+                <h3 class="card-title">Load Blog Posts From Your Website</h3>
                 <span class="card-title-icon"><i class="fas fa-question-circle tool-icon"></i><span
                             class="card-title-help" style="width:250px">
                             <p>For multiple posts use your blog page's url<br>For individual posts use the blog post's
@@ -813,7 +813,7 @@
 
         <div id="tools" class="main-view" :class="{open: app.activeView === 'tools'}">
             <div class="card">
-                <h3 class="card-title">Create a Banner Image</h3>
+                <h3 class="card-title">Create a Custom Banner Image</h3>
                 <span class="card-title-icon"><i class="fas fa-question-circle tool-icon"></i><span
                             class="card-title-help" style="width:300px">
                             Looking for some premade image banner backgrounds?<br>
