--- a/index.html
+++ b/index.html
@@ -1258,7 +1258,7 @@
 
             <div id="help" class="main-view" :class="{open: app.activeView === 'help'}">
                 <div class="card">
-                    <div class="form-item split even" style="margin-top:15px">
+                    <div class="form-item split even border" style="margin-top:15px">
                         <div>
                             <searchbar element="helpCards">Search for help</searchbar>
                         </div>
