--- a/index.html
+++ b/index.html
@@ -293,7 +293,8 @@
                                                 Banking products and services are offered by referral arrangements through our related company
                                                 Manulife Bank of Canada. Please confirm with your advisor which company you are dealing with for each
                                                 of your products and services.
-                                                <br><br>
+                                                <br>
+                                                <img v-if="settings.footer.preset.disclaimer.logo" :src="isLight(styles.footer.textColor) ? 'https://s3.ca-central-1.amazonaws.com/files.siteforward.ca/Images/Logos/English/white/Manulife_Securities_linear_white.png' : 'https://s3.ca-central-1.amazonaws.com/files.siteforward.ca/Images/Logos/English/black/Manulife_Securities_linear_black.png'" width="300" height="auto"><br>
                                                 <em><a href="https://www.manulifesecurities.ca/corporate-disclaimers.html" target="_blank"
                                                         :style="{color: styles.footer.linkColor}">Legal
                                                         and Disclaimers</a> | <a href="https://www.manulife.ca/privacy-policies.html" target="_blank"
@@ -334,7 +335,7 @@
                 <div class="card">
                     <h3 class="card-title">Email Preview Text</h3>
                     <span class="card-title-icon"><i class="fas fa-question-circle tool-icon"></i><span class="card-title-help" style="width:300px">
-                            <p><strong>Email Preview Text</strong><br>
+                            <p><strong><i class="fas fa-envelope-open-text"></i> Preview Text</strong><br>
                                 <small>(The text below the subject line)</small><br>
                                 This is the text that will be shown in an email client when showing a preview of the
                                 email.
@@ -348,10 +349,10 @@
                 <div class="card">
                     <h3 class="card-title">Load Blog Posts From Your Website</h3>
                     <span class="card-title-icon"><i class="fas fa-question-circle tool-icon"></i><span class="card-title-help" style="width:300px">
-                            <p><strong>Load Multiple Posts</strong><br>
+                            <p><strong><i class="fas fa-mail-bulk"></i> Load Multiple Posts</strong><br>
                                 This will load in multiple blog posts from your website.<br>
                                 Make sure to use your Blog <strong>Page's</strong> URL</p>
-                            <p><strong>Load Individual Posts</strong><br>
+                            <p><strong><i class="fas fa-envelope"></i> Load Individual Posts</strong><br>
                                 This will load in a single blog post from your website.<br>
                                 Make sure to use your Blog <strong>Post's</strong> URL</p>
 
@@ -365,7 +366,7 @@
                             <input type="text" id="loadPosts" required ref="loadPosts" title=" ">
                             <label for="loadPosts">Post Page's URL</label>
                         </div>
-                        <input type="number" id="loadPostsCount" required ref="loadPostsCount" value="6" class="compact"
+                        <input type="number" id="loadPostsCount" required ref="loadPostsCount" value="3" class="compact"
                             aria-label="Number of posts to load">
                         <button @click="loadPostsFromURL"><i class="fas fa-file-import"></i> Load Posts</button>
                     </div>
@@ -531,6 +532,15 @@
                                     <label for="footer-preset-disclaimer-insuranceOBA">Insurance OBA</label>
                                 </div>
                             </div>
+                            <div class="form-item  split even">
+                                <div class="border">
+                                    <input type="checkbox" id="footer-preset-disclaimer-logo"
+                                    v-model="settings.footer.preset.disclaimer.logo" aria-label="Toggle using Securities Logo" checked required>
+                                    <label for="footer-reset-disclaimer-logo">Manulife Securities Logo</label>
+                                </div>
+                                <div ></div>
+                                <div></div>
+                            </div>
                         </div>
                     </div>
                     <div class="accordion" :class="{open: settings.footer.style == 2}" @click="settings.footer.style = 2">
@@ -551,8 +561,8 @@
                 <div class="card">
                     <h3 class="card-title">Colour Settings</h3>
                     <span class="card-title-icon"><i class="fas fa-question-circle tool-icon"></i><span class="card-title-help" style="width:200px">
-                            <p><strong>Colour Settings</strong><br>
-                                These colours can also be set per post in the Edit tab</p>
+                            <p><strong><i class="fas fa-palette"></i> Colour Settings</strong><br>
+                                These settings will affect all posts, but individual post colours can also be set per post in the Edit tab</p>
                         </span></span>
                     <div class="form-item  split even">
                         <div>
@@ -617,9 +627,9 @@
                 <div class="card">
                     <h3 class="card-title">Style Settings</h3>
                     <span class="card-title-icon"><i class="fas fa-question-circle tool-icon"></i><span class="card-title-help" style="width:300px">
-                            <p><strong>Style Settings</strong><br>
-                                Some of these settings also be set per post in the Edit tab</p>
-                            <p><strong>Border Radius(Rounded)</strong><br>
+                            <p><strong><i class="fas fa-pen-fancy"></i> Style Settings</strong><br>
+                                These settings will affect all posts, but individual post styles can also be set per post in the Edit tab</p>
+                            <p><strong><i class="fas fa-border-style"></i> Border Radius(Rounded)</strong><br>
                                 Due to Outlook's limitations, this will not be displayed in Outlook for Desktop or Web.
                             </p>
                         </span></span>
@@ -667,6 +677,11 @@
                 <div class="card">
                     <h3 class="card-title">Edit Newsletter</h3>
                     <span class="card-title-icon" title="Add Custom Post" @click="addPost"><i class="far fa-plus-square tool-icon"></i></span>
+                    <span class="card-title-icon" style="right:50px"><i class="fas fa-question-circle tool-icon"></i><span class="card-title-help" style="width:200px">
+                        <p><strong><i class="fa fa-image"></i> Looking for some images to use?</strong><br>Try SiteForward's image bank:<br><a href="https://siteforward.ca/tools/image-bank"
+                            target="_blank">https://siteforward.ca/tools/image-bank</a></p>
+
+                    </span></span>
                     <div class="edit-newsletter">
                         <ul class="newsletter-list">
                             <li v-if="posts.length == 0">
@@ -843,10 +858,10 @@
                 <div class="card">
                     <h3 class="card-title">Newsletter Management</h3>
                     <span class="card-title-icon"><i class="fas fa-question-circle tool-icon"></i><span class="card-title-help" style="width:400px">
-                            <p><strong>Local <small>(Web browser)</small></strong><br>
+                            <p><strong><i class="fas fa-download"></i> Local <small>(Web browser)</small></strong><br>
                                 This will load/save the newsletter into your web browser's local storage.<br>
                                 Clearing your browser's cache will delete this saved version.</p>
-                            <p><strong>File <small>(JSON file)</small></strong><br>
+                            <p><strong><i class="fas fa-file-download"></i> File <small>(JSON file)</small></strong><br>
                                 This will load/save the newsletter into a .json file that can be moved and saved on your
                                 computer</p>
                         </span></span>
@@ -890,13 +905,13 @@
                             <p>Make sure to save your current newsletter if you think you may want to revert back to it.
                             </p>
                             <div class="form-item">
-                                <button @click="loadTemplate(1)" title="Load the Template" style="margin-left: 0; margin-top: 10px;">
+                                <button @click="loadTemplate()" title="Load the Template" style="margin-left: 0; margin-top: 10px;">
                                     <i class="fas fa-file-download"></i> Load Template
                                 </button>
                             </div>
                         </div>
                         <div class="col col-left">
-                            <img class="template-thumbnail" src="https://via.placeholder.com/200x300.png?text=Template+Image"
+                            <img class="template-thumbnail" src="imgs/template.png"
                                 alt="Template Thumbnail">
                         </div>
                     </div>
@@ -930,15 +945,10 @@
             <div id="banner" class="main-view" :class="{open: app.activeView === 'banner'}">
                 <div class="card">
                     <h3 class="card-title">Create a Custom Banner Image</h3>
-                    <span class="card-title-icon"><i class="fas fa-question-circle tool-icon"></i><span class="card-title-help" style="width:300px">
-                            Looking for some premade image banner backgrounds?<br>
-                            Visit: <a href="https://siteforward.ca/tools/image-bank" target="_blank">https://siteforward.ca/tools/image-bank</a>
-                            <hr>
-                            <div class="row">
-                                <div class="col">If you can't change the color, try changing the vertical slider first
-                                </div>
-                                <div class="col"><img src="imgs\colourSlider.png" width="128px" alt="Colour Slider Example"></div>
-                            </div>
+                    <span class="card-title-icon"><i class="fas fa-question-circle tool-icon"></i><span class="card-title-help" style="width:200px">
+                        <p><strong><i class="fa fa-image"></i> Looking for some images to use?</strong><br>Try SiteForward's image bank:<br><a href="https://siteforward.ca/tools/image-bank"
+                            target="_blank">https://siteforward.ca/tools/image-bank</a></p>
+                            
                         </span></span>
                     <div class="form-item split even border">
                         <div>
@@ -1324,9 +1334,8 @@
                     </div>
                     <div class="card">
                         <h3 class="card-title">How to use a <strong>Custom Banner</strong></h3>
-                        <p><strong><small>If you're looking for pre-made banner image urls please look here: <a
-                                        href="https://siteforward.ca/tools/image-bank"
-                                        target="_blank">https://siteforward.ca/tools/image-bank</a></small></strong></p>
+                        <p><strong><small>Looking for pre-made banner images? Try SiteForward's image bank: <a
+                                        href="https://siteforward.ca/tools/image-bank" target="_blank">https://siteforward.ca/tools/image-bank</a></small></strong></p>
                         <ol>
                             <li>Go to the <strong>Tools</strong> tab</li>
                             <li>Insert a banner image URL</li>
