Fix for MS Logo not working

--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                                                 Manulife Bank of Canada. Please confirm with your advisor which company you are dealing with for each
                                                 of your products and services.
                                                 <br>
-                                                <img v-if="settings.footer.preset.disclaimer.logo" :src="isLight(styles.footer.textColor) ? 'https://s3.ca-central-1.amazonaws.com/files.siteforward.ca/Images/Logos/English/white/Manulife_Securities_linear_white.png' : 'https://s3.ca-central-1.amazonaws.com/files.siteforward.ca/Images/Logos/English/black/Manulife_Securities_linear_black.png'" width="300" height="auto"><br>
+                                                <img v-if="settings.footer.preset.disclaimer.logo" :src="isLight(styles.footer.textColor) ? 'https://static.twentyoverten.com/5b6c40e420726c57d29b423f/EkpFQZQ3Zmy/Manulife_Securities_linear_reversed_rgb.png' : 'https://static.twentyoverten.com/5b6c40e420726c57d29b423f/skkT7LqlHey/Manulife_Securities_linear_rgb.png'" width="300" height="auto"><br>
                                                 <em><a href="https://www.manulifesecurities.ca/corporate-disclaimers.html" target="_blank"
                                                         :style="{color: styles.footer.linkColor}">Legal
                                                         and Disclaimers</a> | <a href="https://www.manulife.ca/privacy-policies.html" target="_blank"
